# home_computer

./: der.py  formatting.py  main.py  polynomial.py
c-awesome/: program  program.c
coins/: coins
cpp-code/: code  code.c  fractal.cpp
cpp-code/mandlebrot/: CMakeLists.txt  ai.cpp  fracsave.cpp  fractal.cpp  new_fractal.cpp  rendererclass.cpp
learn-python/: lagrange_interpolation.py
risk/: main.py
